# image-processor-server

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  grafana.ini  main.py  prometheus.yml  pyproject.toml  testing.py
app/: api.py  db.py  logger.py  minio_client.py  pika_queue.py  worker.py
app/core/: settings.py
app/tests/: generate_random_image.py  test_api.py
grafana/dashboards/: cadvisor.json  minio.json  rabbitmq.json
grafana/provisioning/dashboards/: dashboards.yml
