[project]
name = "image-processor-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=25.1.0",
    "fastapi[standard]>=0.116.1",
    "minio>=7.2.15",
    "numpy>=2.3.1",
    "pika>=1.3.2",
    "pillow>=11.3.0",
    "pydantic-settings>=2.10.1",
    "tenacity>=9.1.2",
    "pytest>=8.4.1",
]
